--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-<!-- Navigation Bar begins -->
+<!-- Navigation Bar begins -->  
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -91,8 +91,8 @@
 	</div>
 </div>
 <script src="https://d3js.org/d3.v5.min.js"></script>
-
-<script src="logic.js"></script>
+<script type="text/javascript" src="config.js"></script>
+<script type="text/javascript" src="logic.js"></script>
 
 </body>
 <footer>
