--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
 	          	<li class="dropdown">
 	            	<a href="#" class="dropdown-toggle" id="plots" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="True">Plots <span class="caret"></span></a>
 	            <ul class="dropdown-menu" aria-labelledby="plots">
-	              <li><a href="one.html">LINK 1</a></li>
-	              <li><a href="two.html">LINK 2</a></li>
+	              <li><a href="Heatmap.html">Heatmap</a></li>
+	              <li><a href="Markers.html">Markers Map</a></li>
 	            </ul>
 	          </li>
 	          <!-- link to Comparison page -->
@@ -66,7 +66,9 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam hic corrupti, alias quibusdam enim esse animi aliquam laborum necessitatibus nostrum, sunt ex assumenda veritatis sint aliquid beatae dolorum quia perferendis..</p>
 					</article>
 				</section>
-    </div>
+	</div>
+	
+	<!-- <div id="map"></div> -->
   
 
 		<div class="col-md-5">
@@ -92,6 +94,10 @@
 </div>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script type="text/javascript" src="config.js"></script>
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
+<!-- Leaflet heatmap plugin-->
+<script type="text/javascript" src="leaflet-heat.js"></script>
 <script type="text/javascript" src="logic.js"></script>
 
 </body>
