--- a/templates/style.css
+++ b/templates/style.css
@@ -96,6 +96,19 @@ p {
 
 /*-- Graphs thumbnail section in index.html --*/
 
+
+#map,
+body,
+html {
+  height: 100%;
+}
+
+#map2,
+body,
+html {
+  height: 100%;
+}
+
 .thumbnail {
   border-color: transparent;
 }
