--- a/templates/Heatmap.html
+++ b/templates/Heatmap.html
@@ -14,13 +14,7 @@
 
   <body>
 
-    <div id="page1">
-      <div id='map'></div>
-    </div>
-    
-    <div id="page2">
-      <div id='map2'></div>
-    </div>
+    <div id="map"></div>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script type="text/javascript" src="config.js"></script>
     <!-- Leaflet JS -->
