--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 	<!-- Navigation bar ends. Content begins -->
 <div class="container-fluid">
   <div class="row">
-		<div class="col-md-6 summary">
+		<div class="col-md-5 summary">
 				<section>
 					<!-- Summary heading -->
 					<h1><span align="center">Summary
@@ -63,31 +63,33 @@
 
 					</p> 
 				
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam hic corrupti, alias quibusdam enim esse animi aliquam laborum necessitatibus nostrum, sunt ex assumenda veritatis sint aliquid beatae dolorum quia perferendis..</p>
+					<p>According to Forbes, Data Science has been rated the #1 job type in the US for 4 years in a row. This page has links to search Indeed and compare other tech jobs to Data Science and see the prominence of each one, and their popular locations.
+					<br>
+					<br>
+					Our mission is to scrape the Indeed website for the following job titles: Data analyst/scientist
+					Software engineer Front end developer
+					<br>
+					<br>
+					The heatmap and markers map compares the number of positions available for each career type and their prominent locations.</p>
 					</article>
 				</section>
 	</div>
 	
-	<!-- <div id="map"></div> -->
+	<div id="map"></div>
   
 
 		<div class="col-md-5">
 			<div class="container-fluid graphs">
-			<h1>Pages</h1>
+			<h1>Results</h1>
 			<hr>
 			<!-- thumbnails and links to all pages -->
 				<div class="col-md-5 col-sm-3 col-xs-12">
-					<h4><strong>PAGE 1</strong></h4>
-					   <a href="NEEDTOCREATE.html" class="thumbnail"><img src="" alt="" alt=""> .</a></div>
+					<h4><strong>Heatmap</strong></h4>
+					   <a href="heatmap.html" class="thumbnail"><img src="../assets/data_img.jpg" alt="" alt=""> Heatmap </a></div>
 				<div class="col-md-5 col-sm-3 col-xs-12">
-					<h4><strong>PAGE 2</strong></h4>
-						   <a href="NEEDTOCREATE.html" class="thumbnail"><img src="" alt="" alt=""> .</a></div>	   
-				<div class="col-md-5 col-sm-3 col-xs-12">
-					<h4><strong>PAGE 3</strong></h4>
-						   <a href="NEEDTOCREATE.html" class="thumbnail"><img src="" alt="" alt=""> .</a></div>
-				<div class="col-md-5 col-sm-3 col-xs-12">
-					<h4><strong>PAGE 4</strong></h4>
-						   <a href="NEEDTOCREATE.html" class="thumbnail"><img src="" alt="" alt=""> .</a></div>
+					<h4><strong>Markers</strong></h4>
+						   <a href="Markers.html" class="thumbnail"><img src="../assets/data_img4.jpg" alt="" alt=""> Markers </a></div>	   
+
 			</div>	
 		</div>
 	</div>
