index.html update

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 	            </ul>
 	          </li>
 	          <!-- link to Comparison page -->
-	          <li><a href="NEEDTOCREATE.html">Comparison</a></li>
+	          <li><a href="index.html">Home</a></li>
 	        </div>
       	</div>
 		<div class="clearfix"></div>
@@ -54,23 +54,18 @@
 		<div class="col-md-5 summary">
 				<section>
 					<!-- Summary heading -->
-					<h1><span align="center">Summary
-					</span></h1>
-	            	<hr>
-	            	<article>
-	            	<img src="" alt="">
+					<h1><span align="center">Summary</span></h1><hr>			
 					<p>
-
-					</p> 
-				
-					<p>According to Forbes, Data Science has been rated the #1 job type in the US for 4 years in a row. This page has links to search Indeed and compare other tech jobs to Data Science and see the prominence of each one, and their popular locations.
-					<br>
-					<br>
-					Our mission is to scrape the Indeed website for the following job titles: Data analyst/scientist
-					Software engineer Front end developer
-					<br>
-					<br>
-					The heatmap and markers map compares the number of positions available for each career type and their prominent locations.</p>
+						<br>
+						According to Forbes, Data Science has been rated the #1 job type in the US for 4 years in a row. This page has links to search Indeed and compare other tech jobs to Data Science and see the prominence of each one, and their popular locations.
+						<br>
+						<br>
+						Our mission is to scrape the Indeed website for the following job titles: Data analyst/scientist
+						Software engineer Front end developer
+						<br>
+						<br>
+						The heatmap and markers map compares the number of positions available for each career type and their prominent locations.
+				  </p>
 					</article>
 				</section>
 	</div>
