index.html updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,10 @@
 	        <div id="navbar" class="nav navbar-nav navbar-right collapse navbar-collapse">
 	        	<!-- plots dropdown-menu -->
 	          	<li class="dropdown">
-	            	<a href="#" class="dropdown-toggle" id="plots" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="True">Plots <span class="caret"></span></a>
+	            	<a href="#" class="dropdown-toggle" id="plots" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="True">Results <span class="caret"></span></a>
 	            <ul class="dropdown-menu" aria-labelledby="plots">
 	              <li><a href="Heatmap.html">Heatmap</a></li>
-	              <li><a href="Markers.html">Markers Map</a></li>
+	              <li><a href="Markers.html">Plots</a></li>
 	            </ul>
 	          </li>
 	          <!-- link to Comparison page -->
@@ -64,7 +64,7 @@
 						Software engineer Front end developer
 						<br>
 						<br>
-						The heatmap and markers map compares the number of positions available for each career type and their prominent locations.
+						The heatmap and plots compares the number of positions available for each career type and their prominent locations.
 				  </p>
 					</article>
 				</section>
@@ -82,8 +82,8 @@
 					<h4><strong>Heatmap</strong></h4>
 					   <a href="heatmap.html" class="thumbnail"><img src="../assets/data_img.jpg" alt="" alt=""> Heatmap </a></div>
 				<div class="col-md-5 col-sm-3 col-xs-12">
-					<h4><strong>Markers</strong></h4>
-						   <a href="Markers.html" class="thumbnail"><img src="../assets/data_img4.jpg" alt="" alt=""> Markers </a></div>	   
+					<h4><strong>Plots</strong></h4>
+						   <a href="Markers.html" class="thumbnail"><img src="../assets/data_img4.jpg" alt="" alt=""> Plots </a></div>	   
 
 			</div>	
 		</div>
@@ -96,6 +96,7 @@
 <!-- Leaflet heatmap plugin-->
 <script type="text/javascript" src="leaflet-heat.js"></script>
 <script type="text/javascript" src="logic.js"></script>
+<script type="text/javascript" src="plot.js"></script>
 
 </body>
 <footer>
